[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/crow.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 40 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 41 )

[sub_resource type="CircleShape2D" id=3]

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 55.2136, 37.6254 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.7136, 0.374599 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -0.4272, -0.250801 )
shape = SubResource( 2 )

[node name="Detection_of_Player" type="Area2D" parent="." groups=["Enemy"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_of_Player"]
scale = Vector2( 60, 60 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Detection_of_Player" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Detection_of_Player" to="." method="_on_Area2D_area_exited"]
